--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <script src="https://use.fontawesome.com/102d004b3a.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quicksand:100,200,300">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -29,11 +28,11 @@
         <h1><span> Stomach Cancer</span></h3>
         <h2 id="subtitle">Majidul Mooktadeer</h2>
         <div id="navbar">
-            <span class="navlink" id="facebook"><a href="https://www.facebook.com/profile.php?id=100008014488117" target="_newtab"><i class="fa fa-envelope-o" aria-hidden="true"></i></a></span>
-            <span class="navlink" id="facebook"><a href="https://www.facebook.com/Wrd2hanS?fb_dtsg_ag=AdwLbVDKOlsShO8YkpVkBZdYgfMajTIpHLkikOWZRogzDA%3AAdyI31mwsUwbgL735AL7RZvo8qZdTwx5FwlZlz47sneI6w" target="_newtab"><i class="fa fa-github" aria-hidden="true"></i></a></span>
-            <span class="navlink" id="facebook"><a href="https://www.facebook.com/zaid.shaikh.77715869?fb_dtsg_ag=AdwLbVDKOlsShO8YkpVkBZdYgfMajTIpHLkikOWZRogzDA%3AAdyI31mwsUwbgL735AL7RZvo8qZdTwx5FwlZlz47sneI6w" target="_newtab"><i class="fa fa-linkedin" aria-hidden="true"></i></a></span>
-            <span class="navlink" id="linkedin"><a href="http://www.facebook.com/navidmx" target="_newtab"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></span>
-            <span class="navlink" id="instagram"><a href="http://www.instagram.com/navidx" target="_newtab"><i class="fa fa-instagram" aria-hidden="true"></i></a></span>
+            <span class="navlink" id="facebook"><a href="https://www.facebook.com/profile.php?id=100008014488117" target="_newtab"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></span>
+            <span class="navlink" id="facebook"><a href="https://www.facebook.com/Wrd2hanS?ref=br_rs" target="_newtab"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></span>
+            <span class="navlink" id="FaceBook"><a href="https://www.facebook.com/zaid.shaikh.77715869?fb_dtsg_ag=AdwLbVDKOlsShO8YkpVkBZdYgfMajTIpHLkikOWZRogzDA%3AAdyI31mwsUwbgL735AL7RZvo8qZdTwx5FwlZlz47sneI6w" target="_newtab"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></span>
+            <span class="navlink" id="instagram"><a href="https://www.instagram.com/fayeem_majidul/" target="_newtab"><i class="fa fa-instagram" aria-hidden="true"></i></a></span>
+            <span class="navlink" id="LinkedIn"><a href="https://www.facebook.com/zaid.shaikh.77715869?fb_dtsg_ag=AdwLbVDKOlsShO8YkpVkBZdYgfMajTIpHLkikOWZRogzDA%3AAdyI31mwsUwbgL735AL7RZvo8qZdTwx5FwlZlz47sneI6w" target="_newtab"><i class="fa fa-linkedin" aria-hidden="true"></i></a></span>
         </div>
     </div>
     <div id="sidebarTab-left" class="sidebarTab">
@@ -56,7 +55,6 @@
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
                 <div class="modal-body">
-                    <embed id="resume-display" src="assets/resume/Resume.pdf" type="application/pdf">
                 </div>
             </div>
         </div>
@@ -80,9 +78,10 @@
     </script>
     <!--Libraries-->
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="assets/js/script.js"></script>
+    
 </body>
 
 </html>
