--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
             <span class="navlink" id="FaceBook"><a href="https://www.facebook.com/zaid.shaikh.77715869?fb_dtsg_ag=AdwLbVDKOlsShO8YkpVkBZdYgfMajTIpHLkikOWZRogzDA%3AAdyI31mwsUwbgL735AL7RZvo8qZdTwx5FwlZlz47sneI6w" target="_newtab"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></span>
             <span class="navlink" id="instagram"><a href="https://www.instagram.com/fayeem_majidul/" target="_newtab"><i class="fa fa-instagram" aria-hidden="true"></i></a></span>
             <span class="navlink" id="LinkedIn"><a href="https://www.facebook.com/zaid.shaikh.77715869?fb_dtsg_ag=AdwLbVDKOlsShO8YkpVkBZdYgfMajTIpHLkikOWZRogzDA%3AAdyI31mwsUwbgL735AL7RZvo8qZdTwx5FwlZlz47sneI6w" target="_newtab"><i class="fa fa-linkedin" aria-hidden="true"></i></a></span>
+            <br>
+            <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRcHFnBCuMrizeJjyg3xV1UA5ZALOLi30Romw_6zr7oFKwVJF5XKNs4VUDDuSRUKkUYIiV6rpbUqn67/embed?start=true&loop=false&delayms=3000" frameborder="0" width="1000" height="500" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
         </div>
     </div>
     <div id="sidebarTab-left" class="sidebarTab">
