--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
             <span class="navlink" id="facebook"><a href="https://www.facebook.com/Wrd2hanS?ref=br_rs" target="_newtab"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></span>
             <span class="navlink" id="FaceBook"><a href="https://www.facebook.com/zaid.shaikh.77715869?fb_dtsg_ag=AdwLbVDKOlsShO8YkpVkBZdYgfMajTIpHLkikOWZRogzDA%3AAdyI31mwsUwbgL735AL7RZvo8qZdTwx5FwlZlz47sneI6w" target="_newtab"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></span>
             <span class="navlink" id="instagram"><a href="https://www.instagram.com/fayeem_majidul/" target="_newtab"><i class="fa fa-instagram" aria-hidden="true"></i></a></span>
-            <span class="navlink" id="LinkedIn"><a href="https://www.facebook.com/zaid.shaikh.77715869?fb_dtsg_ag=AdwLbVDKOlsShO8YkpVkBZdYgfMajTIpHLkikOWZRogzDA%3AAdyI31mwsUwbgL735AL7RZvo8qZdTwx5FwlZlz47sneI6w" target="_newtab"><i class="fa fa-linkedin" aria-hidden="true"></i></a></span>
+            <span class="navlink" id="LinkedIn"><a href="https://www.linkedin.com/in/majidul-mooktadeer-762815166/" target="_newtab"><i class="fa fa-linkedin" aria-hidden="true"></i></a></span>
             <br>
-            <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRcHFnBCuMrizeJjyg3xV1UA5ZALOLi30Romw_6zr7oFKwVJF5XKNs4VUDDuSRUKkUYIiV6rpbUqn67/embed?start=true&loop=false&delayms=3000" frameborder="0" width="1000" height="500" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+            <iframe id="Slides" src="https://docs.google.com/presentation/d/e/2PACX-1vRcHFnBCuMrizeJjyg3xV1UA5ZALOLi30Romw_6zr7oFKwVJF5XKNs4VUDDuSRUKkUYIiV6rpbUqn67/embed?start=true&loop=false&delayms=3000" frameborder="0" width="1000" height="500" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
         </div>
     </div>
     <div id="sidebarTab-left" class="sidebarTab">
@@ -48,7 +48,7 @@
         <div class="panel-group" id="accordion"></div>
     </div>
     <div id="sidebar-right" class="sidebar">
-        <h3>MY PROJECTS</h3>
+        <h3><span>Creators + Slides</span></h3>
     </div>
     <div class="modal fade" id="resumeModal" role="dialog">
         <div class="modal-dialog modal-lg">
