--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
             <span class="navlink" id="instagram"><a href="https://www.instagram.com/fayeem_majidul/" target="_newtab"><i class="fa fa-instagram" aria-hidden="true"></i></a></span>
             <span class="navlink" id="LinkedIn"><a href="https://www.linkedin.com/in/majidul-mooktadeer-762815166/" target="_newtab"><i class="fa fa-linkedin" aria-hidden="true"></i></a></span>
             <br>
-            <iframe id="Slides" src="https://docs.google.com/presentation/d/e/2PACX-1vRcHFnBCuMrizeJjyg3xV1UA5ZALOLi30Romw_6zr7oFKwVJF5XKNs4VUDDuSRUKkUYIiV6rpbUqn67/embed?start=true&loop=false&delayms=3000" frameborder="0" width="1000" height="500" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+            <br>
+            <iframe id="Slides" src="https://docs.google.com/presentation/d/e/2PACX-1vScV7kUT6cSIt9Q1PAWSaArv9if4-CcKsQwu-3-t05gVVbvb42Ca4Jde9EnLtJDYFKHEYoYKh04H2xB/embed?start=true&loop=true&delayms=3000" frameborder="0" width="1000" height="500" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
         </div>
     </div>
     <div id="sidebarTab-left" class="sidebarTab">
